@@ -20,7 +20,7 @@ var CloudCommander, Util, DOM, Dropbox, cb, Client;
         var lSrc        = '//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.7.1/dropbox.min.js',
         //var lSrc        = CloudCmd.LIBDIRCLIENT + 'storage/dropbox/lib/dropbox.js',
             lLocal      = CloudCmd.LIBDIRCLIENT + 'storage/dropbox/lib/dropbox.min.js',
-            lOnload     = function(){               
+            lOnload     = function(){
                 console.timeEnd('dropbox load');
                 DOM.Images.hideLoad();
                 
@@ -57,6 +57,7 @@ var CloudCommander, Util, DOM, Dropbox, cb, Client;
             Client = new Dropbox.Client({
                 key: pConfig.dropbox_encoded_key
             });
+            
             Client.authDriver(new Dropbox.Drivers.Redirect({rememberUser: true}));
             
             Client.authenticate(function(pError, pClient) {
