@@ -15,25 +15,28 @@ var CloudCommander, Util, DOM, gapi;
         var lUrl = 'https://apis.google.com/js/client.js';
         
         DOM.jsload(lUrl, function(){
-            /* https://developers.google.com/drive/credentials */
-            var lCLIENT_ID  = '255175681917.apps.googleusercontent.com',
-                lSCOPES     = 'https://www.googleapis.com/auth/drive',
-                lParams     = {
-                    'client_id' : lCLIENT_ID,
-                    'scope'     : lSCOPES,
-                    'immediate' : false
-                };
-            
-            setTimeout(function() {
-                gapi.auth.authorize(lParams, function(pAuthResult){
+            CloudCmd.getConfig(function(pConfig){
+                /* https://developers.google.com/drive/credentials */
+                var lCLIENT_ID  = pConfig.gdrive_key + '.apps.googleusercontent.com',
+                    lSCOPES     = 'https://www.googleapis.com/auth/drive',
                     
-                    if (pAuthResult && !pAuthResult.error)
-                        gapi.client.load('drive', 'v2', function() {
-                            Util.exec(pCallBack);
+                    lParams     = {
+                        'client_id' : lCLIENT_ID,
+                        'scope'     : lSCOPES,
+                        'immediate' : false
+                    };
+                
+                setTimeout(function() {
+                    gapi.auth.authorize(lParams, function(pAuthResult){
+                        
+                        if (pAuthResult && !pAuthResult.error)
+                            gapi.client.load('drive', 'v2', function() {
+                                Util.exec(pCallBack);
+                            });
                         });
-                    });
-                    
-            }, 500);
+                        
+                }, 500);
+            });
         });
     }
     
