@@ -68,6 +68,8 @@ keyStop: function(e, opt) {
 
 * Fixed bug with height of terminal.
 
+* Added ability to read gdrive key from config.
+
 
 2012.12.12, Version 0.1.8
 
